--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 adaptive = "1.2.0-alpha03"
 agp = "8.9.1"
-kotlin = "2.0.0"
+kotlin = "2.0.21"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -16,9 +16,9 @@ coil = "2.4.0"
 material3WindowSizeClass = "1.3.2"
 hilt = "2.56.1"
 hiltNavigationCompose = "1.2.0"
-room = "2.7.0"
 roomCompiler = "2.7.0"
 roomRuntime = "2.7.0"
+profileinstaller = "1.4.1"
 
 [libraries]
 androidx-adaptive = { module = "androidx.compose.material3.adaptive:adaptive", version.ref = "adaptive" }
@@ -51,6 +51,7 @@ androidx-material-icons-extended = { group = "androidx.compose.material", name =
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+androidx-profileinstaller = { group = "androidx.profileinstaller", name = "profileinstaller", version.ref = "profileinstaller" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
