--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,41 +23,38 @@ jobs:
       uses: gradle/actions/setup-gradle@v4
       with:
         gradle-version: wrapper
-        cache-read-only: false 
 
-    - name: Patch Files with Python
+    - name: Smart Patch with Python
       run: |
         python3 -c '
         import os, re
 
-        def patch_file(filepath):
+        def patch_kotlin_file(filepath):
             with open(filepath, "r") as f:
                 content = f.read()
             
-            # 1. Substitui a lógica de diretório (mais abrangente)
-            pattern = r"getExternalFilesDir\s*\(\s*Environment\.DIRECTORY_DOWNLOADS\s*\)"
+            # 1. Substitui [qualquer_coisa].getExternalFilesDir(...) por File(...)
+            # Isso remove o "context." ou "it." que causou o erro anterior
+            pattern = r"[\w\.]*getExternalFilesDir\s*\(\s*Environment\.DIRECTORY_DOWNLOADS\s*\)"
             replacement = "File(Environment.getExternalStoragePublicDirectory(Environment.DIRECTORY_DOWNLOADS), \"Nit\")"
             
             if "getExternalFilesDir" in content:
+                print(f"Corrigindo logica de download em: {filepath}")
                 new_content = re.sub(pattern, replacement, content)
                 
-                # 2. Garante os imports logo após o package
+                # 2. Garante os imports necessarios logo apos o package
                 if "import java.io.File" not in new_content:
-                    import_str = "\nimport android.os.Environment\nimport java.io.File"
-                    if "package " in new_content:
-                        new_content = re.sub(r"(package .*\n)", r"\1" + import_str, new_content)
-                    else:
-                        new_content = import_str + "\n" + new_content
+                    import_block = "\nimport android.os.Environment\nimport java.io.File\n"
+                    new_content = re.sub(r"(package .*\n)", r"\1" + import_block, new_content)
                 
                 with open(filepath, "w") as f:
                     f.write(new_content)
-                print(f"Patched: {filepath}")
 
-        # Varre a pasta do código fonte
+        # Varre a pasta de código fonte
         for root, dirs, files in os.walk("app/src/main/java"):
             for file in files:
                 if file.endswith(".kt"):
-                    patch_file(os.path.join(root, file))
+                    patch_kotlin_file(os.path.join(root, file))
         '
 
     - name: Fix AndroidManifest
@@ -67,20 +64,16 @@ jobs:
         if ! grep -q "requestLegacyExternalStorage" $MANIFEST; then
           sed -i "s/<application/<application android:requestLegacyExternalStorage=\"true\"/g" $MANIFEST
         fi
-        # Garante as permissões (sem duplicar)
+        # Garante as permissões básicas
         grep -q "WRITE_EXTERNAL_STORAGE" $MANIFEST || sed -i "/<application/i <uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\" />" $MANIFEST
         grep -q "READ_EXTERNAL_STORAGE" $MANIFEST || sed -i "/<application/i <uses-permission android:name=\"android.permission.READ_EXTERNAL_STORAGE\" />" $MANIFEST
 
-    - name: Grant execute permission for gradlew
+    - name: Grant execute permission
       run: chmod +x gradlew
 
     - name: Build with Gradle
-      run: |
-        ./gradlew assembleDebug \
-          --parallel \
-          --build-cache \
-          -Dorg.gradle.jvmargs="-Xmx4g -Dfile.encoding=UTF-8" \
-          -Dorg.gradle.configuration-cache=false
+      # Desativamos o configuration-cache aqui para garantir que as mudancas no codigo sejam lidas
+      run: ./gradlew assembleDebug --no-configuration-cache
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
